// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge renders correctly with appearance 1`] = `
<span
  class="rounded-2xl py-0.5 text-xs font-medium flex items-center justify-center leading-[18px] px-2 gap-1 bg-primary-100 text-primary-700 pl-[6px]"
>
  <span
    class="flex text-primary-500"
  >
    <span>
      Icon
    </span>
  </span>
  Label
</span>
`;

exports[`Badge renders correctly with avatar icon 1`] = `
<span
  class="rounded-2xl py-0.5 text-xs font-medium flex items-center justify-center leading-[18px] px-2 gap-1 bg-primary-100 text-primary-700 pl-[6px] !pl-[3px] gap-[6px]"
>
  <span
    class="flex text-primary-500 w-4 h-4"
  >
    <span>
      Icon
    </span>
  </span>
  Label
</span>
`;

exports[`Badge renders correctly with custom class name 1`] = `
<span
  class="rounded-2xl py-0.5 text-xs font-medium flex items-center justify-center leading-[18px] px-2 gap-1 bg-primary-100 text-primary-700 pl-[6px] custom-class"
>
  <span
    class="flex text-primary-500"
  >
    <span>
      Icon
    </span>
  </span>
  Label
</span>
`;

exports[`Badge renders correctly with custom icon class name 1`] = `
<span
  class="rounded-2xl py-0.5 text-xs font-medium flex items-center justify-center leading-[18px] px-2 gap-1 bg-primary-100 text-primary-700 pl-[6px]"
>
  <span
    class="flex text-primary-500 custom-icon-class"
  >
    <span>
      Icon
    </span>
  </span>
  Label
</span>
`;

exports[`Badge renders correctly with icon on the right 1`] = `
<span
  class="rounded-2xl py-0.5 text-xs font-medium flex items-center justify-center leading-[18px] px-2 gap-1 bg-primary-100 text-primary-700 pr-[6px]"
>
  Label
  <span
    class="flex text-primary-500"
  >
    <span>
      Icon
    </span>
  </span>
</span>
`;

exports[`Badge renders correctly with icon only 1`] = `
<span
  class="rounded-2xl py-0.5 text-xs font-medium flex items-center justify-center leading-[18px] px-2 gap-1 bg-primary-100 text-primary-700 pl-[6px] !p-1"
>
  <span
    class="flex text-primary-500 text-primary-700"
  >
    <span>
      Icon
    </span>
  </span>
</span>
`;

exports[`Badge renders correctly with label and icon 1`] = `
<span
  class="rounded-2xl py-0.5 text-xs font-medium flex items-center justify-center leading-[18px] px-2 gap-1 bg-primary-100 text-primary-700 pl-[6px]"
>
  <span
    class="flex text-primary-500"
  >
    <span>
      Icon
    </span>
  </span>
  Label
</span>
`;

exports[`Badge renders correctly with label only 1`] = `
<span
  class="rounded-2xl py-0.5 text-xs font-medium flex items-center justify-center leading-[18px] px-2 gap-1 bg-primary-100 text-primary-700 pl-[6px] !px-2"
>
  Label
</span>
`;
